# xtree

./: .gitignore  CMakeLists.txt  README.md  xml.cpp  xml.hpp  xml_test.cpp
benchmarks/: CMakeLists.txt  Makefile  main.cpp  outlogs.txt
benchmarks/input/: book_store.xml  employee_hierarchy.xml  employee_records.xml  gie_file.xml  gie_file2.xml  kml_manager_export.xml  kml_manager_export_waypoints.xml  plant_catalog.xml
include/: CMakeLists.txt  Makefile  xml.cpp  xml.hpp  xtree.cpp  xtree.hpp
tests/: CMakeLists.txt  Makefile  main.cpp  test1.xml  text.xml
tests/input/: books_catalog.xml  employee_records.xml  plant_catalog.xml
